# calibrationPTZ

./: CMakeLists.txt  README.md
doc/: Doxyfile.extra.in
include/: CMakeLists.txt  matrix.h
include/calibration/: matrix.h  matrix.h~
include/calibrationPTZ/: Calibration.h  Calibration.hh  ExtrinsicParam.hh  matrix.hh
src/: CMakeLists.txt  Calibration.cpp  ExtrinsicParam.cpp  matrix.cpp
tests/: CMakeLists.txt  CMakeLists.txt~  testpolyeig1.cpp  testpolyeig2.cpp  testpseudoinverse.cpp  testpseudoinverse.cpp~
